--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 <link href="app.css" type="text/css" />
   <meta charset="utf-8">
   <title>JS Bin</title>
@@ -14,8 +14,8 @@
   <div ng-app="myApp" ng-controller="myCtrl">
   <form name="songForm">
     <div class="form-group">
-      <label>Spotify search:</label>
-      <input name="search" ng-minlength=3 placeholder="Enter your search.." ng-model="track" class="form-control" required></input>
+      <label>Search your favorite artist</label>
+      <input name="search" ng-minlength=3 placeholder="Enter your search.." ng-model="album" class="form-control" required></input>
     <p class="help-block" ng-show="songForm.search.$error.minlength">Enter 3+ characters</p>
     </div>
     <div class="form-group">
@@ -24,8 +24,10 @@
   </form>
   <div>
       <div class="container-fixed">
-        <p ng-show="tracks.length>0" class="help-block">Click to sample</p>
-        <div ng-class="track.preview_url == currentSong ? 'playing' : ''"  ng-repeat="track in tracks" class="col-xs-4 img"><img ng-click="play(track.preview_url)" title="{{track.name}}" src="{{track.album.images[1].url}}"></img></div>
+        <p ng-show="albums.length>0" class="help-block">Click to see tracks</p>
+        <div ng-class="album.preview_url == currentSong ? 'playing' : ''"  ng-repeat="album in albums" class="col-xs-4 img"><img ng-click="play(album.preview_url)" title="{{album.name}}" src="{{album.images[1].url}}"></img>
+        <p>Album: {{album.name}}</p>
+        </div>
     </div>
     </div>
   </div>
